# generic-cast

./: Cargo.toml  README.md
src/: lib.rs
